--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,7 +41,14 @@
 {% else %}
   <meta name="twitter:description" content="{{ page.content | strip_html | xml_escape | truncate: 200 }}">
 {% endif %}
+
+{% if post.image %}
+  <meta name="twitter:image:src" content="{{ post.image }}">
+{% else %}
   <meta name="twitter:image:src" content="{{ site.url }}/assets/header-01.png">
+{% endif %}
+
+
 
 
 {% if page.title %}
@@ -59,7 +66,7 @@
 {% endif %}
 
 {% if post.image %}
-  <meta property="og:image" content="{{ post.image | site.url }}">
+  <meta property="og:image" content="{{ post.image }}">
 {% else %}
   <meta property="og:image" content="{{ site.url }}/assets/header-01.png">
 {% endif %}
