--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,8 +42,8 @@
   <meta name="twitter:description" content="{{ page.content | strip_html | xml_escape | truncate: 200 }}">
 {% endif %}
 
-{% if post.image %}
-  <meta name="twitter:image:src" content="{{ post.image }}">
+{% if page.image %}
+  <meta name="twitter:image:src" content="{{ page.image }}">
 {% else %}
   <meta name="twitter:image:src" content="{{ site.url }}/assets/header-01.png">
 {% endif %}
@@ -65,8 +65,8 @@
   <meta name="og:description" content="{{ page.content | strip_html | xml_escape | truncate: 200 }}">
 {% endif %}
 
-{% if post.image %}
-  <meta property="og:image" content="{{ post.image }}">
+{% if page.image %}
+  <meta property="og:image" content="{{ page.image }}">
 {% else %}
   <meta property="og:image" content="{{ site.url }}/assets/header-01.png">
 {% endif %}
