Update to fonts and adjustments to body text readability

--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -1,7 +1,7 @@
 // fonts
 
-$sans: -apple-system, BlinkMacSystemFont, "Open Sans", sans-serif
-$serif: Georgia, serif
+$sans: -apple-system, BlinkMacSystemFont, Inter, sans-serif
+$serif: 'Source Serif Pro', Georgia, serif
 
 
 // colors
@@ -17,7 +17,7 @@ $midgrey: #555
 $lightgrey: #777
 $fadegrey: #999
 
-$bodycolor: $midgrey
+$bodycolor: #444
 $titlecolor: $basecolor
 $detailcolor: $fadegrey
 
