Update to homepage and fonts

--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -1,6 +1,6 @@
 // fonts
 
-$sans: -apple-system, BlinkMacSystemFont, Inter, sans-serif
+$sans: Inter, -apple-system, BlinkMacSystemFont, Inter, sans-serif
 $serif: 'Source Serif Pro', Georgia, serif
 
 
