--- a/css/blog.sass
+++ b/css/blog.sass
@@ -66,10 +66,10 @@ a
     color: $linkhover
 
 h1
-  font-size: 24px
-  font-weight: 700
+  font-size: 25px
+  font-weight: 900
   color: $titlecolor
-  font-family: $sans
+  font-family: $serif
 
   a
     color: $titlecolor
@@ -77,7 +77,7 @@ h1
     transition: ease-in-out 0.3s
 
     &:hover
-      color: $lightgrey
+      color: $linkhover
 
 h2
   font-size: 40px
