Update to homepage social

--- a/css/home.sass
+++ b/css/home.sass
@@ -131,7 +131,7 @@ body
       transition: ease-in-out 0.3s
 
       &:hover
-        color: $fadegrey
+        color: $darkgrey
 
   img
     height: 30px
@@ -150,6 +150,7 @@ body
 
 div.blog-index
   margin-top: 50px
+  margin-bottom: 50px
   border-radius: 10px
   overflow: hidden!important
 
