Update to homepage

--- a/css/home.sass
+++ b/css/home.sass
@@ -44,7 +44,7 @@ body
     transform: translate(0%, 175px)
 
   h5
-    font-size: 80px
+    font-size: 75px
     color: $basecolor
     font-weight: 900
     font-family: $serif
@@ -56,19 +56,22 @@ body
 
     @media screen and (max-width: $phone)
       margin-top: -50px
+      font-size: 70px
+      margin-bottom: -30px
 
   h1
-    font-size: 38px
+    font-size: 36px
     color: $basecolor
     font-weight: 900
     font-family: $serif
     display: block
     text-align: left
-    line-height: 150%
+    line-height: 140%
     margin-left: 10px
 
     @media screen and (max-width: $phone)
-      font-size: 170%
+      font-size: 220%
+      line-height: 120%
 
   h2
     font-size: 20px!important
