--- a/css/home.sass
+++ b/css/home.sass
@@ -23,8 +23,8 @@ body
   padding-bottom: 200px
 
   @media screen and (max-width: $phone)
-    background-attachment: scroll
-    background-size: auto 100%
+    background-attachment: fixed
+    background-size: cover
 
 .container
   margin: auto
