Update to border radius

--- a/css/blog.sass
+++ b/css/blog.sass
@@ -230,7 +230,7 @@ h4
 
   img
     width: $imgwidth
-    border-radius: 4px 4px 0 0
+    border-radius: $borderradius $borderradius 0 0
     background-color: $fadegrey
     float: left
     display: inline
@@ -254,7 +254,7 @@ h4
     padding: 15px
 
     background-color: #f5f5f5
-    border-radius: 0 0 4px 4px
+    border-radius: 0 0 $borderradius $borderradius
 
 img
   max-width: 100%
