--- a/css/home.sass
+++ b/css/home.sass
@@ -150,7 +150,7 @@ body
 div.blog-index
   margin-top: 50px
   margin-bottom: 50px
-  border-radius: 10px
+  border-radius: $borderradius
   overflow: hidden!important
 
   text-align: center
