--- a/css/license.sass
+++ b/css/license.sass
@@ -105,7 +105,7 @@ p, ul.license-list li.license-list
 
   img
     height: $imgheight
-    border-radius: 5px
+    border-radius: $borderradius
     background-color: $fadegrey
 
 div.profile-content
