--- a/css/work.sass
+++ b/css/work.sass
@@ -91,7 +91,7 @@ body
 
 div.blog-index
   margin-top: 50px
-  border-radius: 4px
+  border-radius: $borderradius
   overflow: hidden!important
 
   text-align: center
