--- a/css/about.sass
+++ b/css/about.sass
@@ -131,7 +131,7 @@ p, ul.license-list li.license-list
 
   img
     height: $imgheight
-    border-radius: 10px
+    border-radius: $borderradius
     background-color: $fadegrey
 
     @media screen and (max-width: 800px)
