--- a/css/bottombar.sass
+++ b/css/bottombar.sass
@@ -24,7 +24,7 @@
     margin: auto
 
     border: 0.9px solid #c9c9c9
-    border-radius: 10px
+    border-radius: $borderradius
     background-color: white
 
     width: 90%
