--- a/css/sidebar.sass
+++ b/css/sidebar.sass
@@ -17,7 +17,7 @@
 
   .card1
     border: 0.5px solid #c9c9c9
-    border-radius: 10px
+    border-radius: $borderradius
     background-color: white
 
     width: 300px
