Update to serif font

--- a/css/_brand.sass
+++ b/css/_brand.sass
@@ -1,7 +1,7 @@
 // fonts
 
 $sans: Inter, -apple-system, BlinkMacSystemFont, sans-serif
-$serif: 'Source Serif Pro', Georgia, serif
+$serif: 'IBM Plex Serif', 'Source Serif Pro', Georgia, serif
 
 
 // colors
