Mastodon social links

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,7 @@
 <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html',''}}">
 
+<a rel="me" href="https://home.social/@francisborja"></a>
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <meta name="theme-color" content="#000000" media="(prefers-color-scheme: light)">
