Mastodon social links

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,6 +4,7 @@
 <title>{{ page.title }}</title>
 {% include head.html %}
 <link rel="stylesheet" type="text/css" href="/css/home.css">
+<a rel="me" href="https://home.social/@francisborja"></a>
 {% seo %}
 </head>
 
@@ -13,7 +14,7 @@
 <div class="container">
 {{ content }}
 </div>
-
+<a rel="me" href="https://home.social/@francisborja"></a>
 
 </body>
 
