--- a/css/about.sass
+++ b/css/about.sass
@@ -26,7 +26,7 @@ body
     width: 100%
 
 .header
-  background-image: url(/assets/about.jpg)
+  background-image: url(/assets/about.webp)
   background-repeat: no-repeat
   background-position: center
   background-size: cover
@@ -43,7 +43,7 @@ body
   margin: 0
 
   @media screen and (max-width: $phone)
-    background-image: url(/assets/about-phone.jpg)
+    background-image: url(/assets/about-phone.webp)
     background-attachment: scroll
     background-position: top
 
