--- a/css/error.sass
+++ b/css/error.sass
@@ -8,7 +8,7 @@ html
   height: 100%
 
 body
-  background-image: url(/assets/404.jpg)
+  background-image: url(/assets/404.webp)
   background-repeat: no-repeat
   background-position: center top
   background-size: cover
