--- a/css/home.sass
+++ b/css/home.sass
@@ -5,7 +5,7 @@
 @import brand
 
 body
-  background-image: url(/assets/bg.jpg)
+  background-image: url(/assets/bg.webp)
   background-repeat: no-repeat
   background-position: center top
   background-size: cover
