--- a/css/work.sass
+++ b/css/work.sass
@@ -5,7 +5,7 @@
 @import brand
 
 body
-  background-image: url(/assets/work-bg-temp.jpg)
+  background-image: url(/assets/work-bg-temp.webp)
   background-repeat: no-repeat
   background-position: center top
   background-size: cover
