Update to <head> to increase performance of fonts

--- a/_includes/bottombar.html
+++ b/_includes/bottombar.html
@@ -10,7 +10,7 @@
 <span class='line'></span>
 
 <div class="card1">
-<img src="/assets/img/profile_bottom.jpg" oncontextmenu="return false" />
+<img src="/assets/img/profile_bottom.webp" oncontextmenu="return false" />
 <div class="profile-content">
 
   <p>Hello. My name is Francis. I&nbsp;am a writer and designer. Welcome to my blog. I&nbsp;hope you become friends with the voices in&nbsp;my head.</p>
